# ToDo

./: .gitignore  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  database.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: af7519bf2c9d_init.py  d1cb97e6fa58_.py  f95d1a8bdba0_auto_migration.py
backend/src/: broker.py  config.py  fs_broker.py  logger.py  main.py
backend/src/api/: auth.py  notifications.py  task.py  user.py
backend/src/constants/: errors.py
backend/src/consumer/: app.py  task.py
backend/src/database/: config.py  core.py  database.py  deps.py  models.py
backend/src/producer/: task_producer.py
backend/src/schemas/: base.py  message.py  task.py  user.py
backend/src/utils/: decorators.py
backend/tests/: conftest.py  factories.py  test_tasks.py
backend/todoapp/: main.py
backend/todoapp/api/: auth.py  task.py
backend/todoapp/database/: core.py  database.py  models.py
backend/todoapp/schemas/: task.py  user.py
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/api/: tasks.js
frontend/src/components/: AddTaskForm.jsx  TaskList.jsx
frontend/src/pages/: TasksPage.jsx
frontend/src/styles/: TaskList.css
