[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asyncpg>=0.31.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "fastapi==0.117.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "polyfactory>=3.1.0",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv==1.2.1",
    "ruff>=0.14.8",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.48.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uvicorn==0.37.0",
]
